--- a/ChatSample/wwwroot/css/Style.css
+++ b/ChatSample/wwwroot/css/Style.css
@@ -1,8 +1,34 @@
-﻿/* If the screen size is 400px wide or less, set the font-size of <div> to 30px */
+﻿html {
+    background: url(../stripes.png) no-repeat center center fixed;
+    background-size: cover;
+}
+
+body, html {
+    height: 100%;
+    margin: 0;
+}
+
+.content-box {
+    columns: 3 auto;
+}
+
+
+
+scroll-container-lockdown {
+    display: block;
+    /*  width: 350px;*/
+    height: 150px;
+    overflow-y: scroll;
+}
+
+
+
+/* If the screen size is 400px wide or less, set the font-size of <div> to 30px */
 @media screen and (max-width: 400px) {
-    
+
     input[type=text] {
-      /*  padding: 10px;*/
+        /*  padding: 10px;*/
+        font-size: 3vw;
         border: 0;
         box-shadow: 0 0 15px 4px rgba(198, 65, 65, 0.42);
         border-radius: 10px;
@@ -46,30 +72,31 @@
     .lastMessage {
         margin-top: 10px;
         margin-bottom: 10px;
-       /* margin-right: 20px;*/
+        /* margin-right: 20px;*/
         background-color: antiquewhite;
         color: rgba(230, 39, 35, 0.86);
         font-weight: bolder;
-      /*  font-size: larger;*/
-       width: 90%;
+        font-size: 2vmin;
+        width: 90%;
         resize: both;
-       /* padding: 10px;*/
+        /* padding: 10px;*/
         border: 0;
         box-shadow: 0 0 15px 4px rgba(198, 65, 65, 0.42);
         border-radius: 10px;
-        height: 20px;
+        height: 5vmin;
     }
 
     input[type=button] {
         /* remove default behavior */
         -webkit-appearance: none;
         /* usual styles */
-      /*  padding: 10px;*/
+        /*  padding: 10px;*/
         border: none;
         background-color: rgba(230, 39, 35, 0.86);
         color: #fff;
         font-weight: 600;
         border-radius: 5px;
+        font-size: 3vw;
     }
 
     scroll-container {
@@ -78,7 +105,21 @@
         height: 100px;*/
         overflow-y: scroll;
     }
+    h1 {
+        padding-top: 10px;
+        color: #3f9ad6;
+        font-size: 5.9vw;
+    }
 
+    h2 {
+        font-size: 3.0vh;
+    }
+
+    p {
+        font-size: 2vmin;
+    }
+
+    
 
 
 
@@ -91,30 +132,22 @@
 
 /* If the screen size is 601px wide or more, set the font-size of <div> to 80px */
 @media screen and (min-width: 401px) {
- 
 
 
 
 
-   input[type=text] {
-    padding: 10px;
-    border: 0;
-    box-shadow: 0 0 15px 4px rgba(198, 65, 65, 0.42);
-    border-radius: 10px;
 
-   }
+    input[type=text] {
+        padding: 10px;
+        border: 0;
+        box-shadow: 0 0 15px 4px rgba(198, 65, 65, 0.42);
+        border-radius: 10px;
+       /* font-size: 3vw;*/
+    }
 
 
 
-html {
-    background: url(../stripes.png) no-repeat center center fixed;
-    background-size: cover;
-}
 
-body, html {
-    height: 100%;
-    margin: 0;
-}
 
 .container {
     background-color: white;
@@ -124,7 +157,7 @@ body, html {
     padding-right: 20px;
     padding-bottom: 20px;
     margin: 20px;
-    font-size: 2vw;
+   /* font-size: 2vw;*/
 }
 
 
@@ -150,34 +183,35 @@ body, html {
     height: 50px;
 }
 
-.lastMessage {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-right: 20px;
-    background-color: antiquewhite;
-    color: rgba(230, 39, 35, 0.86);
-    font-weight: bolder;
-    font-size: larger;
-    width: 90%;
-    resize: both;
-    padding: 10px;
-    border: 0;
-    box-shadow: 0 0 15px 4px rgba(198, 65, 65, 0.42);
-    border-radius: 10px;
-    height: 20px;
-}
+    .lastMessage {
+        margin-top: 10px;
+        margin-bottom: 10px;
+        margin-right: 20px;
+        background-color: antiquewhite;
+        color: rgba(230, 39, 35, 0.86);
+        font-weight: bolder;
+        font-size: 2vmin;
+        width: 90%;
+        resize: both;
+        padding: 10px;
+        border: 0;
+        box-shadow: 0 0 15px 4px rgba(198, 65, 65, 0.42);
+        border-radius: 10px;
+        height: 20px;
+    }
 
-input[type=button] {
-    /* remove default behavior */
-    -webkit-appearance: none;
-    /* usual styles */
-    padding: 10px;
-    border: none;
-    background-color: rgba(230, 39, 35, 0.86);
-    color: #fff;
-    font-weight: 600;
-    border-radius: 5px;
-}
+    input[type=button] {
+        /* remove default behavior */
+        -webkit-appearance: none;
+        /* usual styles */
+        padding: 10px;
+        border: none;
+        background-color: rgba(230, 39, 35, 0.86);
+        color: #fff;
+        font-weight: 600;
+        border-radius: 5px;
+       /* font-size: 3vw;*/
+    }
 
 h1 {
     padding-top: 10px;
@@ -197,18 +231,6 @@ h1 {
 }
 
 
-.content-box {
-    columns: 3 auto;
-}
-
-
-
-scroll-container-lockdown {
-    display: block;
-    /*  width: 350px;*/
-    height: 150px;
-    overflow-y: scroll;
-}
 
 
 
